--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
