--- a/admin/package.json
+++ b/admin/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "aws-sdk": "^2.1533.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "bucket": "^0.0.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -30,10 +32,14 @@
     "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
+    "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "path": "^0.12.7",
     "prerender-node": "^3.7.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
