--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
